@@ -12,6 +12,7 @@ Andreas Brauchli
 Anthony Taylor
 Arwed von Merkatz
 Carl-Anton Ingmarsson
+Carlos Cadete
 Cayle Graumann
 Christian Hergert
 Christian Meyer
