@@ -1,5 +1,12 @@
 2008-11-02  Jürg Billeter  <j@bitron.ch>
 
+	* gobject/valaccodegenerator.vala:
+
+	Fix comment generation of private enums, patch by Carlos Cadete,
+	fixes bug 558533
+
+2008-11-02  Jürg Billeter  <j@bitron.ch>
+
 	* vala/valaclass.vala:
 	* vala/valagenieparser.vala:
 	* vala/valainterface.vala:
